# bazel-animation-pipeline-example

./: .gitignore  README.md  WORKSPACE
blender/2d/: BUILD.bazel  rotating_suzanne_2d.blend
