load("@rules_blender//:index.bzl", "blender_render")
load("@rules_imagemagick//:index.bzl", "magick_genrule")

blender_render(
    name = "frames",
    blend_file = "rotating_suzanne_2d.blend",
    render_format = "PNG",
    frame_start = 0,
    frame_end = 59,
)

magick_genrule(
    name = "gif",
    srcs = [":frames"],
    outs = ["2d.gif"],
    cmd = "convert -dispose 3 -delay 1x30 -loop 0 $(locations :frames) $(location 2d.gif)",
)

magick_genrule(
    name = "mp4",
    srcs = [":frames"],
    outs = ["2d.mp4"],
    cmd = "convert -dispose 3 -delay 1x30 -loop 0 $(locations :frames) $(location 2d.mp4)",
)

magick_genrule(
    name = "spritesheet",
    srcs = [":frames"],
    outs = ["spritesheet.png"],
    cmd = "montage -geometry 100% -background transparent $(locations :frames) $(location spritesheet.png)",
)

filegroup(
    name = "2d",
    srcs = [
        ":gif",
        ":mp4",
        ":spritesheet",
    ],
)
